# nac-aci-gui

./: .env.sample  .gitignore  ACI_API.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  LICESNSE  LOGO-INTEGRATION.md  README.md  logo-preview.html  pyproject.toml  subnets.csv  vlans.csv
.claude/: CROSS_TIER_PROMOTION_ANALYSIS_2025-10-27.md  CROSS_TIER_PROMOTION_ANALYSIS_2025-10-27_19-47.md  CROSS_TIER_PROMOTION_ANALYSIS_2025-10-29.md  CROSS_TIER_PROMOTION_ANALYSIS_2025-10-30.md  CROSS_TIER_PROMOTION_ANALYSIS_2025-10-30_FINAL.md  CROSS_TIER_PROMOTION_ANALYSIS_2025-10-30_SESSION.md  LOG_PROCESSING_SUMMARY.md  MEMORY_LOG_PROCESSING_2025-10-27.md  PROMOTION_SESSION_SUMMARY_2025-10-30.md  process_logs.py  settings.local.json
.claude/memory/: ARCHIVAL_SUMMARY_2025-10-30.md  ARCHIVAL_SUMMARY_2025-10-30_FINAL.md  MEMORY_HEALTH_REPORT.md  PROMOTION_SESSION_2025-10-30.md  PROMOTION_SESSION_2025-10-30_Phase11.md  PROMOTION_SESSION_2025-10-30_Phase5.md  PROMOTION_SESSION_2025-10-30_Phase6.md  PROMOTION_SESSION_2025-10-30_Phase9.md  PROMOTION_SUMMARY.md
.claude/memory/agents/au-promotion/: session-memory.md
.claude/memory/project/: current-session.md  project-errors.md  project-lessons.md
docs/: NETBOX_CONFIG_RELOAD.md  NETBOX_SETUP.md
logs/: pre_tool_use.json
src/nac_aci_gui/: __init__.py  aci.py  app.py  auth.py  nac_api.py  netbox_api.py
src/nac_aci_gui/api/v1/: __init__.py  aci.py  admin.py  auth.py  general.py  nac.py  netbox.py  tables.py
src/nac_aci_gui/templates/: index.html  login.html  nac-aci-bd.yaml  nac-network.yaml
yaml/: auth.yaml.sample  config.yaml.sample
(+5 files in other folders)
